--- a/adventureGame/Properties/Resources.resx
+++ b/adventureGame/Properties/Resources.resx
@@ -118,7 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="FREDDY" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FREDDY.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Ebn0Kq1UMAAmU1m" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ebn0Kq1UMAAmU1m.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Ebn0Kq1UMAAmU1m (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ebn0Kq1UMAAmU1m (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FREDDY-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FREDDY-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="freddyHonk" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fnaf-12-3-freddys-nose-sound-_1_.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
