--- a/adventureGame/Properties/Resources.resx
+++ b/adventureGame/Properties/Resources.resx
@@ -118,19 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="FREDDY" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FREDDY.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Ebn0Kq1UMAAmU1m" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ebn0Kq1UMAAmU1m.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Ebn0Kq1UMAAmU1m (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ebn0Kq1UMAAmU1m (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="freddyScream" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\five-nights-at-freddys-full-scream-sound_2.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="FREDDY-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FREDDY-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="freddyHonk" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fnaf-12-3-freddys-nose-sound-_1_.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="FREDDY" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FREDDY.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jumpscareDeath" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jumpscare.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="suitDeath" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ddcdmn5-124a2e75-56a8-4461-8703-163ed15d83be-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="suitScream" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\William-Afton_s-Death-Scene-_SFM-FNaF_.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="winSong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\five-nights-at-freddys-6-am.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
